--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <script>
     // --- PENTING: GANTI LINK DI BAWAH INI ---
     // Masukkan Link CSV dari langkah "Publish to Web" di sini:
-    const googleSheetURL = "MASUKKAN_LINK_GOOGLE_SHEET_CSV_DISINI";
+    const googleSheetURL = "https://docs.google.com/spreadsheets/d/1pAKjzozBh7PsOnWqa_hjRcjABFSDbop7pf7MIzYZKEs/edit?usp=sharing";
     // ----------------------------------------
 
     let products = [];
